Fix pfp looking wonky on iOS

--- a/static/user.css
+++ b/static/user.css
@@ -32,10 +32,9 @@
 
 .member img {
     object-fit: cover;
-    width: 50%;
-    min-height: auto;
+    width: 12vh;
+    height: 12vh;
     border-radius: 50%;
-    margin: auto;
 }
 
 .member h2 {
